CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.14

	- The IPP backend did not pass the requesting user name
	  when checking on the print job status. This prevented
	  it from waiting for the job to complete when
	  communicating with some IPP implementations that
	  require it.


CHANGES IN CUPS V1.1.13

	- The lpstat command did not report jobs submitted to
	  regular printer classes.
	- The texttops filter didn't use sufficient precision
	  when positioning text with some values of cpi and lpi.
	  This could cause the alignment of text to stray.
	- cupsGetDests() didn't merge the options from the
	  /etc/cups/lpoptions file with ~/.lpoptions - options
	  in ~/.lpoptions overrode them completely.
	- Added support for KOI8-R and KOI8-U character sets,
	  and added several Russian message catalogs.
	- The scheduler put the wrong timezone offset in the log
	  files (e.g. +0500 instead of -0500 for EST...)
	- The scheduler did not ignore trailing whitespace in
	  *.convs files.
	- The scheduler now forces all processes to exit (kill
	  -9) when it is stopped.  This prevents parallel and
	  USB devices from running in the background after cupsd
	  goes away.
	- The cupsParseOptions() function didn't skip trailing
	  whitespace after quoted values.
	- More changes to support CUPS on OS/2.
	- Added Simplified Chinese message catalog.
	- Added PAM support for IRIX.
	- The cupsGetPPD() function didn't remove the @server
	  portion of the printer name, and since it would
	  connect immediately to the remote server instead of
	  the local server, the printer would not be found.
	- Classification and page labels were not rotated to
	  match the page orientation.
	- Now set the TCP "no delay" option on network
	  connections to improve performance/response time.
	- Improved the IRIX printing tools support with patches
	  from Andrea Suatoni.
	- Added a new PrintcapGUI directive to specify the GUI
	  option panel program to use for the IRIX printing
	  tools support.